# zju_hpcweek1st_writeup

./: README.md
hpcweek-ct/: CMakeLists.txt  README.md  solve.md
hpcweek-ct/src/: fbp.cpp  fbp.h  main.cpp
mcticks/: .gitignore  CMakeLists.txt  README.md  build.sh  solve.md
mcticks/go/: .gitignore  LICENSE  README.md  config.json  go.mod  go.sum  main.go
mcticks/go/animate/: shapes.go
mcticks/go/chat/: decoration.go  jsonmessage.go  message.go  nbtmessage.go
mcticks/go/chat/sign/: session.go  sign.go
mcticks/go/client/: action.go  client.go  commands.go  inventory.go  move.go  packets.go
mcticks/go/data/entity/: entity.go  gen_entity.go
mcticks/go/data/item/: gen_item.go  item.go
mcticks/go/data/lang/: gen_lang.go
mcticks/go/data/packetid/: clientboundpacketid_string.go  packetid.go  serverboundpacketid_string.go
mcticks/go/data/registryid/: attribute.go  block.go  blockentitytype.go  blocktype.go  consumeeffecttype.go  datacomponenttype.go  enchantmententityeffecttype.go  enchantmentlocationbasedeffecttype.go  entitysubpredicatetype.go  entitytype.go  item.go  particletype.go  recipebookcategory.go  recipedisplay.go  recipeserializer.go  slotdisplay.go  soundevent.go  triggertype.go  worldgen_placementmodifiertype.go  worldgen_treedecoratortype.go
mcticks/go/data/soundid/: gen_soundid.go  soundid.go
mcticks/go/game/: chat.go  config.go  game.go  playerlist.go  tags.go
mcticks/go/hpcworld/: bridge.go  bridge.h
mcticks/go/judge/: judger.go  provider.go  save.go
mcticks/go/level/: bitstorage.go  bitstorage_test.go  chunk.go  palette.go  palette_test.go
mcticks/go/level/block/: block.go  block_entities.nbt  block_states.nbt  blockentities.go  blockentity.go  blocks.go  blocks.nbt  utilfuncs.go
mcticks/go/level/component/: blockentitydata.go  bucketentitydata.go  components.go  customdata.go  custommodeldata.go  customname.go  damage.go  debugstickstate.go  dyedcolor.go  enchantmentglintoverride.go  entitydata.go  food.go  instrument.go  itemname.go  lodestonetracker.go  lore.go  mapcolor.go  mapdecorations.go  mapid.go  mappostprogressing.go  maxdamage.go  maxstacksize.go  ominousbottleamplifier.go  potioncontents.go  rarity.go  recipes.go  repaircost.go  storedenchantments.go  unbreakable.go  writablebookcontent.go
mcticks/go/nbt/: README.md  special_test.go
mcticks/go/nbt/dynbt/: decode.go  decode_test.go  encode.go  encode_test.go  types.go  update.go
mcticks/go/net/: conn.go  interface.go
mcticks/go/net/packet/: packet_test.go  types.go  types_test.go  util_test.go
mcticks/go/registry/: codec.go  network.go  registry.go
mcticks/go/save/: chunk.go  chunk_test.go  level.go  playerdata.go
mcticks/go/save/region/: mca_test.go
mcticks/go/server/: client.go  configuration.go  gameplay.go  handshake.go  keepalive.go  login.go  ping.go  playerlist.go  server.go
mcticks/go/server/auth/: auth.go
mcticks/go/server/command/: component.go  parsers.go  serialize.go
mcticks/go/world/: entity.go  itemstack.go  loader.go  player.go  registrycodec.go  script.go  tick.go  viewer.go  world.go
mcticks/go/world/1.21-registry/: biome.json  chat_type.json  damage_type.json  dimension_type.json  (+2 more)
mcticks/scripts/: light-boom.mcsh  mountain-water.mcsh  torch-mars.mcsh
mcticks/util/: Tuple.h
mcticks/world/: Block.cpp  Block.h  BlockBehaviour.cpp  BlockBehaviour.h  BlockInfo.h  Bridge.cpp  Bridge.h  Chunk.h  ChunkCoord.h  Dimension.h  LevelTicks.h  LightTick.cpp  LightTick.h
rvllm/: CMakeLists.txt  README.md  qmatmul.c  solve.md
rvllm/include/: qmatmul.h
rvllm/src/: mul_mat_compute.c  qmatmul.c  type_traits.c
(+39 files in other folders)
